--- a/dev/index.html
+++ b/dev/index.html
@@ -12,12 +12,17 @@
 	
     <title>React Widgets</title>
     <style>
-      body {
-        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-        font-size: 14px;
-        margin: 75px;
-        padding-top: 50px;
-      }
+        body {
+            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+            font-size: 14px;
+            margin: 75px;
+            padding-top: 50px;
+        }
+        .form-control.field-error {
+          border-color: #a94442;
+          -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+          box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+        }
     </style>
 </head>
 <body>
