--- a/dev/index.html
+++ b/dev/index.html
@@ -18,7 +18,12 @@
             margin: 75px;
             padding-top: 50px;
         }
-        .form-control.field-error {
+
+        .form-message {
+            color: #a94442;
+        }
+
+        .message-active {
           border-color: #a94442;
           -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
           box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
